--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -51,6 +51,33 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     animation-name: animatetop;
     animation-duration: 0.4s;
+    max-height: 37.5rem;
+    margin-top: 5%;
+}
+
+.modal-content > {
+    display: flex;
+    justify-content: stretch;
+}
+
+.modal_content_sub {
+    margin-right: 10px;
+}
+
+@media screen and (min-width: 50rem) {
+    .modal-content ul {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        min-width: 12.5rem;
+        max-height: 300px;
+    }
+    .modal_content_list_p {
+        flex-direction: column;
+        flex-wrap: wrap;
+        width: 12.5rem;
+        padding: 0.1875rem;
+    }
 }
 
 /* Add Animation */
